# mira-clients

./: .gitignore  APPLE.md  Cargo.toml  README.md  codecov.yml  package.json
.github/workflows/: ci.yml  release.yml
apps/mira-client/: .gitignore  README.md  mira-client.prod.toml  package-lock.json  package.json  playwright.config.ts  tsconfig.node.json  vite.config.ts  vitest.config.ts
apps/mira-client/e2e/: auth.spec.ts  client-page.spec.ts  login.spec.ts
apps/mira-client/e2e/support/: apiProxy.ts  auth.ts  mockClientApi.ts
apps/mira-client/public/: oauth-loading.html
apps/mira-client/scripts/: local-desktop.mjs  merge-openapi.mjs  with-env.mjs
apps/mira-client/src/: gameSession.ts  lobbyRoles.tsx  runtimeConfig.ts  settings.ts  settingsStore.ts
apps/mira-client/src-tauri/: tauri.conf.json  tauri.desktop-dev.conf.json
apps/mira-client/src-tauri/capabilities/: default.json
apps/mira-client/src-tauri/src/: lib.rs  main.rs
apps/mira-client/src/api/: client.ts  http.ts
apps/mira-client/src/auth/: config.ts  keycloak.ts  storage.ts
apps/mira-client/src/components/: ChatDock.tsx  FriendCard.tsx  ProfileChampionsTab.tsx  SettingsModal.tsx  Sidebar.tsx  TitleBar.tsx
apps/mira-client/src/css/: base.css  responsive.css
apps/mira-client/src/locales/: de.ftl  en.ftl
apps/mira-client/src/pages/: Client.tsx  (+2 more)
apps/mira-client/tests/: auth-keycloak.test.ts  auth-storage.test.ts  profile.test.ts  settings.test.ts
apps/mira-game-client/: Cargo.toml
apps/mira-game-client/src/: cli.rs  lib.rs  main.rs  ui_components.rs
apps/mira-game-client/src/app/: leave_menu.rs  loading_screen.rs  main_hud.rs  mod.rs  plugins.rs  settings.rs  states.rs
apps/mira-game-client/src/network/: mod.rs  plugin.rs  settings.rs
apps/mira-game-client/tests/: cli_settings.rs
apps/mira-game-server/: Cargo.toml
apps/mira-game-server/src/: main.rs
apps/mira-game-server/src/app/: control_api.rs  match_manifest.rs  mod.rs  plugins.rs  states.rs
apps/mira-game-server/src/app/content/: champion_catalog.rs  mod.rs
apps/mira-game-server/src/app/network/: lobby.rs  mod.rs  plugin.rs  settings.rs
apps/mira-installer/: index.html  package-lock.json  package.json  vite.config.ts
apps/mira-installer/scripts/: run-installer.mjs
apps/mira-installer/src/: App.css  App.tsx  i18n.ts  vite-env.d.ts
apps/mira-installer/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
apps/mira-installer/src-tauri/capabilities/: default.json
apps/mira-installer/src-tauri/src/: lib.rs  main.rs
assets/: index.html
assets/components/: beu.routes.rs  main.component.css  main.component.html  main.component.rs
assets/components/loading-screen/: loading-screen.component.css  loading-screen.component.html  loading-screen.component.rs
crates/game-logic/: Cargo.toml
crates/game-logic/src/: lib.rs
crates/game-logic/src/systems/: animation.rs  camera.rs  healthbar.rs  mod.rs  movement.rs  networked_players.rs  setup.rs  targeting.rs  ui_state.rs
crates/game-logic/src/systems/characters/: ignara.rs  lira.rs  mod.rs  sophia.rs  yuna.rs
crates/game-shared/: Cargo.toml
crates/game-shared/src/: lib.rs
crates/game-world/: Cargo.toml
crates/game-world/src/: lib.rs
scripts/: install-macos.sh  patch-tauri-appimage-env.sh
src/: settings.ts
src/components/: CloseDialog.tsx  FriendCard.tsx  SettingsModal.tsx  Sidebar.tsx
src/pages/: Client.tsx
src/types/: ui.ts
src/utils/: profile.ts
(+30 files in other folders)
