[workspace]
resolver = "3"
members = [
  "apps/mira-game-client",
  "apps/mira-game-server",
  "crates/game-shared",
  "crates/game-logic",
  "crates/game-world",
]
exclude = [
  "apps/mira-client/src-tauri",
  "apps/mira-installer/src-tauri",
]

[workspace.package]
edition = "2024"
authors = ["mira contributors"]
version = "0.1.0"

[workspace.dependencies]
avian3d = "0.6.1"
bevy = { version = "0.18.1", features = ["experimental_bevy_feathers", "jpeg"] }
bevy_transform_interpolation = "0.4.0"
lightyear = { version = "0.26.4", features = ["udp", "netcode"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

game-shared = { path = "crates/game-shared" }
game-logic = { path = "crates/game-logic" }
game-world = { path = "crates/game-world" }
