[package]
name = "mira-game-client"
edition.workspace = true
authors.workspace = true
version.workspace = true
description = "Mira game client app"

[dependencies]
bevy.workspace = true
bevy_extended_ui.workspace = true
bevy_extended_ui_macros.workspace = true
bevy_transform_interpolation.workspace = true
game-logic.workspace = true
game-shared.workspace = true
game-world.workspace = true
lightyear.workspace = true
serde.workspace = true
serde_json.workspace = true
