[package]
name = "mira-game-client"
edition.workspace = true
authors.workspace = true
version.workspace = true
description = "Mira game client app"

[dependencies]
bevy.workspace = true
bevy_transform_interpolation.workspace = true
game-logic.workspace = true
game-shared.workspace = true
game-world.workspace = true
lightyear.workspace = true
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
serde.workspace = true
serde_json.workspace = true
