[package]
name = "mira-game-server"
edition.workspace = true
authors.workspace = true
version.workspace = true
description = "Mira game server app"

[dependencies]
bevy.workspace = true
game-logic.workspace = true
game-shared.workspace = true
game-world.workspace = true
lightyear.workspace = true
serde.workspace = true
serde_json.workspace = true
