[package]
name = "game-logic"
edition.workspace = true
authors.workspace = true
version.workspace = true
description = "Reusable gameplay systems for Mira Game"

[dependencies]
bevy.workspace = true
bevy_fontmesh = "0.5.0"
bevy_transform_interpolation.workspace = true
game-shared.workspace = true
lightyear.workspace = true
serde.workspace = true
serde_json.workspace = true
