[package]
name = "mira-installer"
version = "0.1.0"
description = "Mira installer"
authors = ["mira contributors"]
edition = "2024"

[lib]
name = "mira_installer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tauri = { version = "2.11.3", features = [] }
tauri-plugin-dialog = "2.5.1"
tauri-plugin-opener = "2.5.4"
zip = { version = "2", default-features = false, features = ["deflate"] }
